--- a/book_library/Dockerfile
+++ b/book_library/Dockerfile
@@ -4,7 +4,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 
 COPY *.go ./
-# RUN go build -o /book-library
-# EXPOSE 8080
+RUN go build -o /book-library
+EXPOSE 8080
 
-# CMD ["/book-library"]
+CMD ["/book-library"]
